# BoundleAdjustment

./: README.md
ba/: BoundleAdjustmentByNode_accelebrate.h  BoundleAdjustmentByNode_accelebrate2.0.h  CMakeLists.txt  ba_main.cpp  bound_adjustment_ceres.cpp  jet.h  point_camera.h  test.cpp  test.txt
ba/data/: test_1.txt
